# local-voice-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSES.md  README.md  compose.yaml
apps/pc-server/: README.md  pyproject.toml
apps/pc-server/migrations/: env.py
apps/pc-server/migrations/versions/: 0001_initial.py  0002_approval_binding_and_recovery_indexes.py
apps/pc-server/src/local_voice_agent_server/: __init__.py  api.py
apps/pc-server/tests/: test_api.py  test_audio_stream.py  test_audio_workers.py  test_client_events.py  test_domain.py  test_execute_tool.py  test_model_router.py  test_model_switch.py  test_persistence.py  test_qwen3_tts_worker.py  test_registered_vllm_runtime.py  test_session_events.py  test_status_adapters.py  test_tool_agent_conversation.py  test_tool_executor_client.py  test_tool_planner.py  test_tool_registry.py  test_vllm_conversation.py  test_voice_profile_api.py  test_voice_profiles.py  test_voice_turn.py
apps/pc-server/workers/: qwen3_tts_worker.py  stt_worker.py  tts_worker.py  vad_worker.py  worker_protocol.py
apps/tool-executor/: README.md  pyproject.toml
apps/tool-executor/src/local_voice_agent_tool_executor/: __init__.py  api.py  audit.py  bootstrap.py  browser.py  contracts.py  development.py  digests.py  errors.py  executor.py  filesystem.py  git.py  mutations.py  service.py  system.py  (+2 more)
apps/tool-executor/tests/: test_api.py  test_bootstrap.py  test_browser.py  test_development.py  test_executor.py  test_git.py  test_mutations.py  test_service.py  test_system.py  test_windows_ui.py  test_workspaces.py
(+219 files in other folders)
