[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "local-voice-agent-tool-executor"
version = "0.1.0"
description = "Least-privilege Local Voice Agent tool executor"
requires-python = ">=3.12,<3.13"
dependencies = [
  "jsonschema[format-nongpl]==4.26.0",
]

[project.optional-dependencies]
test = [
  "pytest==9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/local_voice_agent_tool_executor"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["src"]
